# openclbook

./: .gitignore  package-lock.json  package.json
book-pipeline/: .env.example  .gitignore  OPERATOR.txt  WORKFLOW.md  env.example  pyproject.toml  requirements.txt  watch_inotify.sh
book-pipeline/book_pipeline/: __init__.py  __main__.py  anthropic_client.py  cli.py  config.py  format_bridge.py  graph.py  gutenberg.py  ingest.py  learnings.py  llm_complete.py  llm_stats_emit.py  manuscript_lab.py  manuscript_session_store.py  memory.py  ollama_client.py  openclaw_optional.py  openclaw_tools.py  project_scaffold.py  project_workspace.py  projects_library_scan.py  prompts.py  queue.py  studio_db.py  ui_app.py  usage_stats.py
book-pipeline/book_pipeline/static/: index.html
book-pipeline/book_pipeline/supervisor/: __init__.py  context_split.py  graph_build.py  log_viz.py  nodes.py  nodes_prep.py  orchestration.py  plan_gate.py  prep_gate.py  state.py
book-pipeline/bookfolder/: small.txt
book-pipeline/docs/: INGEST_LANGGRAPH_AND_HUMAN_LOOP.md  UI_SUPERVISOR_OPTIONS.md  fabletome_jobs_extensions.md
book-pipeline/docs/contracts/: S3_AND_GATEWAY_pic_new_res.md  manuscript_job_v1.example.json  manuscript_job_v1.schema.json
book-pipeline/scripts/: book-project.sh  fabletome_api_e2e.py  gutendex_download_batch.py  gutendex_process_batch.py  remote_job_worker.py  scaffold_adaptation_manifest_entries.py  upload_completed_manuscripts_s3.py
book-pipeline/workspace/: config.yaml
book-pipeline/workspace/manuscript/: draft.md
scripts/: _openclaw_run.sh  book-ui.sh  (+7 more)
(+1 files in other folders)
