[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "book-pipeline"
version = "0.1.0"
description = "Local book authoring pipeline (LangGraph + Ollama, inotify-driven queue)"
readme = "OPERATOR.txt"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=1.0.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "httpx>=0.27.0",
  "python-docx>=1.1.0",
  "striprtf>=0.0.26",
  "pyyaml>=6.0",
  "fastapi>=0.115.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
aws = ["boto3>=1.34.0"]

[project.scripts]
book-pipeline = "book_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["book_pipeline*"]

[tool.setuptools.package-data]
book_pipeline = ["static/*.html"]
